[package]
name = "newbee"
version = "0.1.0"
authors = ["wayslog <wayslog@163.com>"]
# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "this is a rdb streamed parser"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/newbee"
homepage = "https://github.com/wayslog/newbee"
repository = "https://github.com/wayslog/newbee"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "./README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["rdb", "stream", "redis"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["parsing", "database", "caching"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "Apache-2.0/MIT"

[lib]
path="src/lib.rs"
name="libnewbee"

[dependencies]
lzf = "0.3.1"